[project]
name = "ai-robotic-voice"
version = "0.1.0"
description = "Repositório para testar geração de áudio a partir de texto com modelos locais e aplicação de efeitos em tempo real."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.2",
]
